// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PostgresQueryBuilder getMany should execute query and hydrate results 1`] = `
[
  target {
    "age": 25,
    "email": "alice@test.com",
    "id": "1",
    "name": "Alice",
  },
  target {
    "age": 30,
    "email": "bob@test.com",
    "id": "2",
    "name": "Bob",
  },
]
`;

exports[`PostgresQueryBuilder getOne should return single entity 1`] = `
target {
  "age": 25,
  "email": "alice@test.com",
  "id": "1",
  "name": "Alice",
}
`;

exports[`PostgresQueryBuilder toSQL should return compiled query 1`] = `
{
  "aliasMap": [
    {
      "metadata": {
        "cache": null,
        "checks": [],
        "defaultOrder": null,
        "embeddedLists": [],
        "entity": {
          "cache": null,
          "comment": null,
          "database": null,
          "decorator": "Entity",
          "name": "users",
          "namespace": "app",
        },
        "extras": [],
        "fields": [
          {
            "arrayType": null,
            "collation": null,
            "comment": null,
            "computed": null,
            "decorator": "Field",
            "default": null,
            "embedded": null,
            "encrypted": null,
            "enum": null,
            "hideOn": [],
            "key": "id",
            "max": null,
            "min": null,
            "name": "id",
            "nullable": false,
            "order": null,
            "precision": null,
            "readonly": false,
            "scale": null,
            "schema": null,
            "transform": null,
            "type": "uuid",
          },
          {
            "arrayType": null,
            "collation": null,
            "comment": null,
            "computed": null,
            "decorator": "Field",
            "default": null,
            "embedded": null,
            "encrypted": null,
            "enum": null,
            "hideOn": [],
            "key": "name",
            "max": null,
            "min": null,
            "name": "name",
            "nullable": false,
            "order": null,
            "precision": null,
            "readonly": false,
            "scale": null,
            "schema": null,
            "transform": null,
            "type": "string",
          },
          {
            "arrayType": null,
            "collation": null,
            "comment": null,
            "computed": null,
            "decorator": "Field",
            "default": null,
            "embedded": null,
            "encrypted": null,
            "enum": null,
            "hideOn": [],
            "key": "email",
            "max": null,
            "min": null,
            "name": "email_address",
            "nullable": false,
            "order": null,
            "precision": null,
            "readonly": false,
            "scale": null,
            "schema": null,
            "transform": null,
            "type": "string",
          },
          {
            "arrayType": null,
            "collation": null,
            "comment": null,
            "computed": null,
            "decorator": "Field",
            "default": null,
            "embedded": null,
            "encrypted": null,
            "enum": null,
            "hideOn": [],
            "key": "age",
            "max": null,
            "min": null,
            "name": "age",
            "nullable": false,
            "order": null,
            "precision": null,
            "readonly": false,
            "scale": null,
            "schema": null,
            "transform": null,
            "type": "integer",
          },
        ],
        "filters": [],
        "generated": [],
        "hooks": [],
        "indexes": [],
        "inheritance": null,
        "primaryKeys": [
          "id",
        ],
        "relationCounts": [],
        "relationIds": [],
        "relations": [],
        "schemas": [],
        "scopeKeys": [],
        "target": [Function],
        "uniques": [],
        "versionKeys": [],
      },
      "relationKey": null,
      "schema": "app",
      "tableAlias": "t0",
      "tableName": "users",
    },
  ],
  "params": [
    "Alice",
  ],
  "text": "SELECT "t0"."id" AS "t0_id", "t0"."name" AS "t0_name", "t0"."email_address" AS "t0_email", "t0"."age" AS "t0_age" FROM "app"."users" AS "t0" WHERE "t0"."name" = $1",
}
`;
